[package]
name = "interprocess-typed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures = "0.3.25"
interprocess = { version = "1.2.1", features = ["tokio", "tokio_support"] }
serde = "1.0.148"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["io-util", "macros", "sync"] }

[dev-dependencies]
tokio = { version = "1.22.0", features = ["rt", "rt-multi-thread"]}
