[package]
name = "interprocess-typed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures = "0.3.25"
interprocess = { version = "1.2.1", features = ["tokio_support"], default-features = false }
serde = "1.0.148"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["rt", "io-util", "macros", "sync"] }

[target.'cfg(windows)'.dependencies]
uuid = { version = "1.2", features = ["v4"] }

[target.'cfg(not(windows))'.dependencies]
tempfile = "3.3.0"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.22.0", features = ["rt-multi-thread"]}
